fixed AM and PM backgrounds not showing up on a correc and PM to show correct background on current time of a city

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,7 +64,7 @@ header input:focus {
 
 #error .error-text {
     font-size: 2rem;
-    color: #FFFBE9;
+    color: #565656;
 }
 
 /*  Styling for main part of the app  */
